--- a/client/static/css/main.css
+++ b/client/static/css/main.css
@@ -4,6 +4,25 @@
   box-sizing: border-box;
 }
 
+:root {
+  --color-pink: #EC5A6D;
+  --color-dark-pink: rgb(140, 10, 27);
+  /* --color-dark-pink: rgb(169, 32, 50); */
+}
+
+/** Start Basic Styling **/
+body {
+  font-family: 'Poppins';
+}
+
+h1 {
+  font-weight: 300;
+}
+
+h2 {
+  font-weight: 300;
+}
+
 ul {
   list-style-type: none;
 }
@@ -19,42 +38,169 @@ a {
 a:hover {
   color: orange;
 }
+/** End Basic Styling **/
 
-.tinder-grid {
-  padding: 1rem 1rem;
-  border: solid 1px purple;
+/** Start Styling Header **/
+header {
+  border-bottom: solid 2px var(--color-pink);
+  height: 3rem;
+}
+
+.header__brand {
+  margin: 0 2rem;
+  display: flex;
+}
+
+.header__brand > * {
+  /* border: solid 1px red; */
+}
+
+.header__brand h1{
+  color: var(--color-pink);
+}
+
+.header__brand svg {
+  fill:var(--color-pink);
+  height: 2rem;
+  margin: .5rem 0 0 1rem;
+  /* align-self: flex-start; */
+}
+/** End Styling Header **/
+
+/** Start Stylig Grid **/
+.cupid-grid {
+  padding: 2rem;
+  /* border: solid 1px purple; */
+
+  height: calc(100vh - 3rem);
+  width: 100vw;
 
   display: grid;
-  width: 100vw;
-  height: 100vh;
-  max-height: 100vh;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows:  1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 
-  grid-row-gap: 1rem;
+  grid-row-gap: 2rem;
   grid-column-gap: 2rem;
 }
-.tinder-grid > div{
-  border: solid 2px burlywood;
-  max-height: 100%;
+
+.cupid-grid > div {
+  border: solid 2px var(--color-pink);
+}
+
+.cupid-grid > div h2 {
+  position: sticky;
+  top:0;
+  padding-left: 1rem;
+  background-color: var(--color-pink);
+  color: var(--color-dark-pink);
+
+  font-weight: 400;
+}
+
+.cupid-grid > div ul {
+  /* margin: 0.5rem 0 .5rem 1rem; */
+  /* margin-top: .5rem; */
+  overflow: auto;
+}
+.cupid-grid > div ul li a{
+  padding: 0.5rem 1rem .5rem 1rem;
+}
+/** End Stylig Grid **/
+
+/** Start Stylig UserList **/
+.userList {
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+
+.userList__list__item a {
+  display: flex;
+  /* flex-wrap: nowrap; */
+
+  align-items: center;
+  transition: all .2s ease-in-out;
+}
+
+.userList__list__item a.selected,
+.userList__list__item a.selected:hover {
+  padding-left: 0.5rem;
+  background-color: var(--color-pink);
+  color: #fff;
+}
+
+.userList__list__item a:hover {
+  color: var(--color-pink);
+}
+
+.userList__list__item a:hover img {
+  border: solid 3px var(--color-pink);
+  transition: border .2s ease-in-out;
+}
+
+.userList__list__item img,
+.userList__list__item a.selected img {
+  border-radius: 50%;
+  border: solid 3px #FFF;
+  transition: border .2s ease-in-out;
+}
+
+.userList__list__item span {
+  padding-left: .5rem;
+}
+
+/** End Stylig UserList **/
+
+
+.cupid-grid__brand {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+
+  display: flex;
+  align-items: center;
+}
+
+
+.header {
+  grid-column: 1 / 5;
+  grid-row: 2 / 3;
+
+  display: flex;
+}
+
+.header > * {
+  width: 20%;
+}
+
+.header > * + *{
+  margin-left: 2rem;
+}
+
+
+
+
+
+.cupid-grid > div{
+  /* border: solid 2px burlywood; */
+  /* max-height: 100%; */
   /* overflow: hidden; */
+  overflow: auto;
 
 /*   display: flex;
   flex-wrap: wrap;
   align-items: flex-start; */
 }
 
-.tinder-grid > div > * {
+.cupid-grid > div > * {
   width: 100%;
 }
 
-.tinder-grid > div > h1 {
+.cupid-grid > div > h1 {
   /* height: 10%; */
 }
 
 .tinder-grid > div > ul {
   /* max-height: 100%; */
-  /* overflow: auto; */
+  overflow: auto;
 }
 
 
@@ -65,7 +211,7 @@ a:hover {
 
 .users {
   grid-column: 1 / 2;
-  grid-row: 1 / 5;
+  grid-row: 2 / 4;
 }
 
 .users li.selected {
@@ -87,8 +233,8 @@ a:hover {
 
 .outbox {
   border: solid 4Px blue;
-  grid-column: 3 / 4;
-  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 .inbox__list {
   border: solid 4Px red;
@@ -100,6 +246,53 @@ a:hover {
 
 }
 
+.conversations {
+  grid-column: 3 / 5;
+  grid-row: 1 / 3;
+}
+
 .message__user {
   font-weight: bold;
+}
+
+.conversations__list {
+  display: flex;
+  flex-direction: column;
+  border: solid 1px red;
+  height: 100%;
+  /* justify-content: flex-end; */
+  justify-content: flex-start;
+}
+
+.conversations__list > * + * {
+  margin-top: 1rem;
+}
+
+.conversation__list__item {
+  border: solid 1px blue;
+  width: 70%;
+
+
+}
+
+.message--sent {
+  align-self: flex-end;
+  
+}
+.message--received {
+  align-self: flex-start;
+}
+
+.matches--new {
+  grid-column: 5 / 6;
+  grid-row: 1 / 2;
+}
+.matches--responded {
+  grid-column: 5 / 6;
+  grid-row: 2 / 3;
+}
+.conversations > * {
+
+  display: flex;
+  flex-direction: column;
 }
