--- a/client/static/css/main.css
+++ b/client/static/css/main.css
@@ -7,19 +7,28 @@
 :root {
   --color-pink: #EC5A6D;
   --color-dark-pink: rgb(140, 10, 27);
-  /* --color-dark-pink: rgb(169, 32, 50); */
+  --color-light-pink: rgb(255, 202, 209);
+
+  --color-red: #FC002B;
+  --color-blue: #0C95E6;
+  --color-green: #11E49D;
+  --color-dark-grey: #a5a5a5;
 }
 
 /** Start Basic Styling **/
 body {
   font-family: 'Poppins';
+  font-weight: 300;
+  color: #000;
 }
 
 h1 {
+  font-size: 2rem;
   font-weight: 300;
 }
 
 h2 {
+  font-size: 1.7rem;
   font-weight: 300;
 }
 
@@ -32,11 +41,28 @@ a {
 }
 
 a {
-  color: #000;
 }
 
 a:hover {
-  color: orange;
+  color: var(--color-pink)
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  /* max-width: 100%; */
+}
+
+.label-hidden {
+  visibility: hidden;
+  width:0;
+  height: 0;
+  position: absolute;
+  top: -999;
+  height: -999;
 }
 /** End Basic Styling **/
 
@@ -68,52 +94,65 @@ header {
 /** End Styling Header **/
 
 /** Start Stylig Grid **/
-.cupid-grid {
+.amor-grid {
   padding: 2rem;
   /* border: solid 1px purple; */
 
-  height: calc(100vh - 3rem);
+  height: calc(100vh - 5rem);
+  
   width: 100vw;
 
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 50%);
 
   grid-row-gap: 2rem;
   grid-column-gap: 2rem;
 }
 
-.cupid-grid > div {
+.amor-grid > div {
   border: solid 2px var(--color-pink);
+
+  overflow: auto;
+  /* border-radius: 2rem; */
 }
 
-.cupid-grid > div h2 {
+.title-box {
   position: sticky;
+  z-index: 3;
   top:0;
-  padding-left: 1rem;
+  padding: 0 1rem 0 1rem;
+
+  font-weight: 400;
   background-color: var(--color-pink);
   color: var(--color-dark-pink);
 
-  font-weight: 400;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.cupid-grid > div ul {
+.title-box > * {
+  /* border: solid 1Px blue; */
+}
+
+.amor-grid > div ul {
   /* margin: 0.5rem 0 .5rem 1rem; */
   /* margin-top: .5rem; */
-  overflow: auto;
+  overflow: auto
 }
-.cupid-grid > div ul li a{
+.amor-grid > div ul li a{
   padding: 0.5rem 1rem .5rem 1rem;
 }
 /** End Stylig Grid **/
 
 /** Start Stylig UserList **/
-.userList {
+.users {
   grid-column: 1/2;
   grid-row: 1/3;
 }
 
-.userList__list__item a {
+.users__list__item a {
   display: flex;
   /* flex-wrap: nowrap; */
 
@@ -121,114 +160,39 @@ header {
   transition: all .2s ease-in-out;
 }
 
-.userList__list__item a.selected,
-.userList__list__item a.selected:hover {
+.users__list__item a.selected,
+.users__list__item a.selected:hover {
   padding-left: 0.5rem;
   background-color: var(--color-pink);
   color: #fff;
 }
 
-.userList__list__item a:hover {
+.users__list__item a:hover {
   color: var(--color-pink);
 }
 
-.userList__list__item a:hover img {
+.users__list__item a:hover img {
   border: solid 3px var(--color-pink);
   transition: border .2s ease-in-out;
 }
 
-.userList__list__item img,
-.userList__list__item a.selected img {
+.users__list__item img,
+.users__list__item a.selected img {
   border-radius: 50%;
   border: solid 3px #FFF;
   transition: border .2s ease-in-out;
 }
 
-.userList__list__item span {
+.users__list__item span {
   padding-left: .5rem;
 }
-
 /** End Stylig UserList **/
 
-
-.cupid-grid__brand {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-
-  display: flex;
-  align-items: center;
-}
-
-
-.header {
-  grid-column: 1 / 5;
-  grid-row: 2 / 3;
-
-  display: flex;
-}
-
-.header > * {
-  width: 20%;
-}
-
-.header > * + *{
-  margin-left: 2rem;
-}
-
-
-
-
-
-.cupid-grid > div{
-  /* border: solid 2px burlywood; */
-  /* max-height: 100%; */
-  /* overflow: hidden; */
-  overflow: auto;
-
-/*   display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start; */
-}
-
-.cupid-grid > div > * {
-  width: 100%;
-}
-
-.cupid-grid > div > h1 {
-  /* height: 10%; */
-}
-
-.tinder-grid > div > ul {
-  /* max-height: 100%; */
-  overflow: auto;
-}
-
-
-
-/* .tinder-grid > div > ul {
-  overflow: auto;
-} */
-
-.users {
-  grid-column: 1 / 2;
-  grid-row: 2 / 4;
-}
-
-.users li.selected {
-  background-color: darkcyan;
-  color: #fff;
-}
-
+/** Start Stylig Inbox/Outbox **/
 .inbox {
   border: solid 4Px red;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-}
-
-.inbox li.selected,
-.outbox li.selected {
-  background-color: darkcyan;
-  color: #fff;
 }
 
 .outbox {
@@ -236,53 +200,188 @@ header {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
-.inbox__list {
-  border: solid 4Px red;
-  
+
+.inbox__count,
+.outbox__count {
+  width: 1.5rem;
+  height: 1.5rem;
+  /* padding: 0 .5rem; */
+  text-align: center;
+  border-radius: 50%;
+  background-color: var(--color-dark-pink);
+  font-size: 1rem;
+  color: #FFF;
+  /* font-weight: 300; */
 }
 
-.outbox__list {
-  border: solid 4Px blue;
-
+.inbox li a,
+.outbox li a {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.conversations {
+.inbox li.selected,
+.outbox li.selected {
+  background-color: var(--color-light-pink);
+  color: var(--color-dark-pink);
+  /* color: #fff; */
+}
+
+.inbox li.selected span {
+  /* color: var(--color-dark-pink); */
+}
+.inbox li.selected a:hover,
+.outbox li.selected a:hover {
+  color: var(--color-dark-pink);
+}
+/** End Stylig Inbox/Outbox **/
+
+/** Start Stylig Conversation **/
+.conversation {
   grid-column: 3 / 5;
   grid-row: 1 / 3;
-}
-
-.message__user {
-  font-weight: bold;
-}
-
-.conversations__list {
+  
   display: flex;
   flex-direction: column;
-  border: solid 1px red;
-  height: 100%;
-  /* justify-content: flex-end; */
-  justify-content: flex-start;
+  /* justify-content: space-between; */
 }
 
-.conversations__list > * + * {
+.conversation__friendImage {
+  margin: .5rem 0;
+  border-radius: 50%;
+  overflow: hidden;
+  /* width: auto;
+  height: auto; */
+}
+
+.conversation__messageArea {
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  /* border: solid 1px red; */
+  
+  /* justify-content: flex-end; */
+  /* justify-content: flex-start; */
+  margin-top: auto;
+  /* border: solid 1px blue; */
+}
+
+.conversation__messageArea > * + * {
   margin-top: 1rem;
 }
 
-.conversation__list__item {
-  border: solid 1px blue;
+.conversation__message {
+  /* border: solid 1px blue; */
+  /*TODO CHEKEN**/
   width: 70%;
+  border-radius: 2rem;
+  padding: .5rem 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
 
-
+.conversation__message > * {
+  flex-basis: 100%;
 }
 
 .message--sent {
   align-self: flex-end;
-  
-}
-.message--received {
-  align-self: flex-start;
+  background-color: var(--color-pink);
+  color: #FFF;
+  box-shadow: -.5rem .5rem 1rem #E5E5E5; 
 }
 
+.message--received {
+  align-self: flex-start;
+  background-color: #DCDCDC;
+  box-shadow: .5rem .5rem 1rem #E5E5E5;
+  /* D9DCDC */
+}
+
+.list__item__sender {
+  color: var(--color-dark-pink);
+  font-weight: 400;
+}
+
+.list__item__time {
+  color: #a5a5a5;
+  margin-left: auto;
+  /* color:blue; */
+}
+
+.list__item__message {
+  width: 100%;
+}
+
+.conversation__newMessage {
+  background-color: var(--color-pink);
+  padding: 1rem;
+
+}
+
+#messenger {
+  /* border: solid 1Px red; */
+
+  display: flex;
+  align-items: center;
+}
+
+#messenger textarea {
+  
+}
+
+#messenger__text {
+  width: 100%;
+  height: 4rem;
+  max-height: 10rem;
+  
+  margin-right: 1rem;
+  border: none;
+  border-radius: 2rem;
+  padding: 1rem;
+
+  font-family: 'Poppins';
+  font-size: 1.2rem;
+  font-weight: 300;
+  overflow: auto;
+}
+
+#messenger button {
+  background-color: transparent;
+  border: solid 2px #FFF;
+  border-radius: 50%;
+  width: 2.7rem;
+  height: 2.7rem;
+  margin-left: auto;
+
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+  
+}
+
+#messenger button svg{
+  width: 1.2rem;
+  fill : #FFF;
+  transition: all .2s ease-in-out;
+/*   height: 2rem; */
+/* border: solid 1px #000; */
+}
+
+#messenger button:hover {
+  background-color: #FFF;
+}
+
+#messenger button:hover svg {
+  fill: var(--color-pink);
+}
+/** End Stylig Conversation **/
+
+
+
+
+
+/** Start Stylig Matches **/
 .matches--new {
   grid-column: 5 / 6;
   grid-row: 1 / 2;
@@ -291,8 +390,202 @@ header {
   grid-column: 5 / 6;
   grid-row: 2 / 3;
 }
-.conversations > * {
+
+.match {
+  /* border: solid 1px red; */
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 1rem 2rem 1rem;
+  height: auto;
+
+
+  align-items: center;
+}
+
+span.match__name {
+  font-size: 1.4rem;
+  text-align: center; 
+  font-weight: 400;
+  /* margin-bottom: .5rem; */
+  color: var(--color-dark-pink);
+}
+
+span.match__ageGender {
+  font-size: 1.2rem;
+  margin-bottom: .5rem;
+
+  display: flex;
+  align-items: center;
+  
+}
+
+span.match__ageGender svg {
+  margin-left: .5rem;
+  height: 1.2rem;
+}
+
+.match__clickArea {
+  width: 100%;
+  position: relative;
+}
+
+.match__image {  
+  margin: 0 auto;
+  /* border-radius: 50%; */
+  /* overflow: hidden; */
+  width: 4rem;
+  height: 4rem;
+  position: relative;
+  padding-bottom: 0%;
+  /* max-width: 5rem;  */
+  /* max-height: 5rem; */
+  /* align-self: center; */
+  /* box-sizing: border-box; */
+  max-width: 100%;
+}
+
+@media screen and (min-width: 48rem) {
+  .match__image {  
+    width: 5rem;
+    height: 5rem;
+  }
+}
+@media screen and (min-width: 64rem) {
+  .match__image {  
+    width: 7rem;
+    height: 7rem;
+  }
+}
+@media screen and (min-width: 90rem) {
+  .match__image {  
+    width: 10rem;
+    height: 10rem;
+  }
+}
+@media screen and (min-width: 100rem) {
+  .match__image {  
+    width: 12rem;
+    height: 12rem;
+  }
+}
+/* @media screen and (min-width: 110rem) {
+  .match__image {  
+    width: 15rem;
+    height: 15rem;
+  }
+} */
+
+
+
+.match__image img {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.match__image__friendRating {
+  position: absolute;
+  width: 1.5rem;
+  height: 1.5rem;
+  top: 0;
+  right: 0;
+}
+
+.match__image__friendRating {
+  fill: var(--color-dark-grey);
+}
+
+.match__rating {
+  position: absolute;
+  width: 100%;
+  /* border: solid 1px burlywood; */
+  height: 50%;
+  bottom: 0;
+  left: 0;
+  transform: translateY(2.5rem);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 90rem) {
+  .match__rating {
+    transform: translateY(3rem);
+  }
+}
+
+.match__rating li:nth-child(2) {
+  /* border: solid 1px red; */
+  align-self: flex-end;
+}
+
+.match__rating button {
+  width: 2rem;
+  height: 2rem;
+  background-color: #FFF;
+  border: none;
+  /* border: solid 2px blue; */
+}
+
+.match__rating button svg {
+  opacity: .3;
+  transition: all .2s ease-in-out;
+}
+
+.match__rating li.selected button svg {
+  opacity: 1;
+}
+
+@media screen and (min-width: 90rem) { 
+  .match__rating button {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
+.match__rating li:nth-child(1) svg{
+  fill: var(--color-red);
+  /* opacity: .5; */
+}
+
+.match__rating li:nth-child(1) button:hover svg{
+  opacity: 1;
+}
+.match__rating li:nth-child(2) svg{
+  fill: var(--color-blue);
+  /* opacity: .5; */
+}
+
+.match__rating li:nth-child(2) button:hover svg{
+  opacity: 1;
+}
+
+.match__rating li:nth-child(3) svg{
+  fill: var(--color-green);
+  /* opacity: .5; */
+}
+
+.match__rating li:nth-child(3) button:hover svg{
+  opacity: 1;
+}
+
+.match__locationInfo {
+  margin-top: 2.5rem;
 
   display: flex;
   flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
+@media screen and (min-width: 90rem) {
+
+  .match__locationInfo {
+   margin-top: 3rem; 
+  }
+}
+/** End Stylig Matches **/
+
+
